--- a/client/dev/partials/projects/indicators/logframe-edit.html
+++ b/client/dev/partials/projects/indicators/logframe-edit.html
@@ -11,10 +11,10 @@
 
 	<fieldset>
 		<legend>
-			<button class="btn btn-primary btn-xs pull-right noprint" log-frame-xls style="margin-bottom: 10px;">
+			<a class="btn btn-primary btn-xs pull-right noprint" log-frame-xls style="margin-bottom: 10px;">
 				<i class="fa fa-download"></i>
 				<span translate="shared.download_table"></span>
-			</button>
+			</a>
 			<span translate="project.goal"></span>
 		</legend>
 
