--- a/client/dev/partials/projects/activity/reporting-detailed.html
+++ b/client/dev/partials/projects/activity/reporting-detailed.html
@@ -62,8 +62,6 @@
 							<option value="month" translate="shared.month"></option>
 							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
-							<option value="entity" translate="project.collection_site_list"></option>
-							<option value="group" translate="project.groups"></option>
 						</select>
 					</div>
 				</div>
@@ -71,24 +69,25 @@
 		</div>
 		<div class="col-sm-6">
 			<div class="form-group">
-				<label for="filter-by-input" class="col-sm-2 control-label" translate="shared.filter"></label>
+				<label for="variable-input" class="col-sm-2 control-label" translate="project.variable"></label>
 				<div class="col-sm-10">
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
-						<select class="form-control input-sm" id="filter-by-input" ng-model="filters.entityId">
-							<option value="" translate="project.full_project"></option>
-							<optgroup label="{{'project.collection_site_list'|translate}}">
-								<option ng-repeat="entity in project.inputEntities" value="{{entity.id}}">{{entity.name}}</option>
-							</optgroup>
-							<optgroup label="{{'project.groups'|translate}}">
-								<option ng-repeat="group in project.inputGroups" value="{{group.id}}">{{group.name}}</option>
-							</optgroup>
-						</select>
+ 					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
+						<project-activity-variable project="project" planning="planning"></project-activity-variable>
 					</div>
-				</div>
+ 				</div>
 			</div>
 		</div>
+	</div>
 
+	<div class="form-group">
+		<label for="filter-input" class="col-sm-1 control-label" translate="shared.filter"></label>
+		<div class="col-sm-11">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
+				<project-activity-filter project="project" planning="planning"></project-activity-filter>
+			</div>
+		</div>
 	</div>
 </form>
 
@@ -98,10 +97,7 @@
 </button>
 <div style="clear: both"></div>
 
-<reporting-graph-adapter
-	type="['year', 'quarter', 'month', 'week', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
-	rows="rows" cols="cols" plots="plots">
-</reporting-graph-adapter>
+<reporting-graph-adapter type="'line'" rows="rows" cols="cols" plots="plots"></reporting-graph-adapter>
 
 <div style="clear: both"></div>
 
@@ -115,8 +111,6 @@
 		<tr>
 			<th style="width: 30px"></th>
 			<th translate="shared.name"></th>
-			<th translate="project.baseline"></th>
-			<th translate="project.target"></th>
 			<th ng-repeat="col in cols">{{col.name}}</th>
 		</tr>
 	</thead>
@@ -126,11 +120,9 @@
 				<input type="checkbox" ng-model="plots[row.id]" ng-if="row.type === 'data'" />
 			</td>
 
-			<th ng-if="row.type === 'header'" colspan="{{3 + cols.length}}" class="indent{{row.indent}}">{{row.text}}</th>
-			<td ng-if="row.type === 'data'" class="indent{{row.indent}}">{{row.name[language]}}</td>
-			<td ng-if="row.type === 'data'">{{row.baseline}}{{row.unit}}</td>
-			<td ng-if="row.type === 'data'">{{row.target}}{{row.unit}}</td>
-			<td ng-if="row.type === 'data'" ng-repeat="col in row.cols track by $index" reporting-field></td>
+			<th ng-if="row.type === 'header'" colspan="{{1 + cols.length}}" class="indent{{row.indent}}">{{row.text}}</th>
+			<td ng-if="row.type === 'data'" class="indent{{row.indent}}">{{row.name}}</td>
+			<td ng-if="row.type === 'data'" ng-repeat="col in row.cols track by $index">{{col}}</td>
 		</tr>
 	</tbody>
 </table>
