--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -62,8 +62,6 @@
 							<option value="month" translate="shared.month"></option>
 							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
-							<option value="entity" translate="project.collection_site_list"></option>
-							<option value="group" translate="project.groups"></option>
 						</select>
 					</div>
 				</div>
@@ -71,24 +69,18 @@
 		</div>
 		<div class="col-sm-6">
 			<div class="form-group">
-				<label for="filter-by-input" class="col-sm-2 control-label" translate="shared.filter"></label>
+				<label for="indicator-input" class="col-sm-2 control-label" translate="shared.indicator"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
-						<select class="form-control input-sm" id="filter-by-input" ng-model="filters.entityId">
-							<option value="" translate="project.full_project"></option>
-							<optgroup label="{{'project.collection_site_list'|translate}}">
-								<option ng-repeat="entity in project.inputEntities" value="{{entity.id}}">{{entity.name}}</option>
-							</optgroup>
-							<optgroup label="{{'project.groups'|translate}}">
-								<option ng-repeat="group in project.inputGroups" value="{{group.id}}">{{group.name}}</option>
-							</optgroup>
-						</select>
+						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
+						<select id="indicator-input"
+								class="form-control input-sm"
+								ng-model="indicatorId"
+								ng-options="id as indicator.name[language] for (id, indicator) in indicatorsById"></select>
 					</div>
 				</div>
 			</div>
 		</div>
-
 	</div>
 </form>
 
@@ -127,7 +119,7 @@
 			</td>
 
 			<th ng-if="row.type === 'header'" colspan="{{3 + cols.length}}" class="indent{{row.indent}}">{{row.text}}</th>
-			<td ng-if="row.type === 'data'" class="indent{{row.indent}}">{{row.name[language]}}</td>
+			<td ng-if="row.type === 'data'" class="indent{{row.indent}}">{{row.name}}</td>
 			<td ng-if="row.type === 'data'">{{row.baseline}}{{row.unit}}</td>
 			<td ng-if="row.type === 'data'">{{row.target}}{{row.unit}}</td>
 			<td ng-if="row.type === 'data'" ng-repeat="col in row.cols track by $index" reporting-field></td>
