--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -233,7 +233,7 @@
 				<td>
 					<a ng-click="newPartition(element.partitions)"
 					   class="btn btn-xs btn-default btn-block"
-					   translate="project.new_partition"></a>
+					   translate="project.add_partition"></a>
 				</td>
 				<td colspan="{{maxPartitions - element.partitions.length}}"
 					ng-if="maxPartitions - element.partitions.length > 0"></td>
