--- a/client/dev/partials/projects/activity/collection-input-edition.html
+++ b/client/dev/partials/projects/activity/collection-input-edition.html
@@ -9,7 +9,7 @@
 
 <doc-reminder pages="project.presentation_project,project.inputs"></doc-reminder>
 
-<div class="panel panel-primary" ng-repeat="section in form.aggregatedData">
+<div class="panel panel-primary" ng-repeat="section in form.sections">
 	<div class="panel-heading" ng-bind="section.name"></div>
 	<div class="panel-body">
 		<form class="form-horizontal">
