--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
-	<li class="active" translate="shared.reporting"></li>
+	<li class="active" translate="shared.reporting_by_indicator"></li>
 </ol>
 
 <doc-reminder pages="project.presentation_project,project.statistics"></doc-reminder>
