--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -62,7 +62,7 @@
 						   disable-if="!project._id">
 
 							<i class="fa fa-line-chart fa-fw"></i>
-							<span translate="shared.reporting"></span>
+							<span translate="shared.reporting_general"></span>
 						</a>
 
 						<a ui-sref="main.project.detailed_activity_reporting"
@@ -71,7 +71,7 @@
 						   disable-if="!project._id">
 
 							<i class="fa fa-bar-chart fa-fw"></i>
-							<span translate="shared.detailed_reporting"></span>
+							<span translate="shared.reporting_by_variable"></span>
 						</a>
 					</div>
 				</div>
@@ -92,14 +92,13 @@
 
 						<a ui-sref="main.project.indicators_reporting" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-line-chart fa-fw"></i>
-							<span translate="shared.reporting"></span>
+							<span translate="shared.reporting_general"></span>
 						</a>
 
 						<a ui-sref="main.project.detailed_indicators_reporting" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-bar-chart fa-fw"></i>
-							<span translate="shared.detailed_reporting"></span>
+							<span translate="shared.reporting_by_indicator"></span>
 						</a>
-
 <!-- 
 						<a ui-sref="main.project.reporting_analysis_list" ui-sref-active="active" class="list-group-item" disable-if="!project._id">
 							<i class="fa fa-lightbulb-o fa-fw"></i>
