Fix acls in project input form

--- a/client/dev/partials/projects/activity/_input_grid.html
+++ b/client/dev/partials/projects/activity/_input_grid.html
@@ -23,7 +23,10 @@
 				{{headerCol.name}}
 			</th>
 			
-			<td ng-repeat="dataCol in row.dataCols">
+			<td ng-repeat="dataCol in row.dataCols"
+				acl-has-project-role="input"
+				acl-fallback="data[variable.id + '.' + dataCol]">
+
 				<input type="number"
 					class="form-control input-sm"
 					ng-model="data[variable.id + '.' + dataCol]"
