--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -310,9 +310,6 @@ ul:hover>.onrollover {
   .main-content { padding-top: 0; }
   .c3-tooltip-container { display: none !important; }
 
-
-
-
 }
 
 
@@ -365,3 +362,6 @@ ul:hover>.onrollover {
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
 
+.form-control-static {
+  min-height: 22px;
+ }
