--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -34,10 +34,10 @@
 			</div>
 		</div>
 
-		<div class="well well-sm">
+		<div class="well well-sm" acl-has-project-role="owner">
 			<div class="form-group">
 				<label for="formula-input" class="col-sm-2 control-label" translate="indicator.formula"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.formula">
+				<div class="col-sm-10">
 					<select class="form-control" name="planning-formula" ng-model="planning.formula" ng-options="id as formula.expression for (id, formula) in indicator.formulas">
 						<option value="" translate="shared.none"></option>
 					</select>
@@ -46,14 +46,14 @@
 
 			<div class="form-group" ng-if="!planning.formula">
 				<label for="source2-input" class="col-sm-2 control-label" translate="project.variable"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.variable">
+				<div class="col-sm-10">
 					<project-activity-variable project="project" planning="planning"></project-activity-variable>
 				</div>
 			</div>
 
 			<div class="form-group" ng-if="planning.variable">
 				<label for="source2-input" class="col-sm-2 control-label" translate="shared.filter"></label>
-				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.filter">
+				<div class="col-sm-10">
 					<project-activity-filter project="project" planning="planning"></project-activity-filter>
 				</div>
 			</div>
