--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -122,7 +122,7 @@
 			<td ng-if="row.type === 'data'" class="indent{{row.indent}}">{{row.name}}</td>
 			<td ng-if="row.type === 'data'">{{row.baseline}}{{row.unit}}</td>
 			<td ng-if="row.type === 'data'">{{row.target}}{{row.unit}}</td>
-			<td ng-if="row.type === 'data'" ng-repeat="col in row.cols track by $index" reporting-field></td>
+			<td ng-if="row.type === 'data'" ng-repeat="col in row.cols track by $index" indicator-reporting-field></td>
 		</tr>
 	</tbody>
 </table>
